package uvigo.tfgalmacen.mobile_android.models;

public class PedidoDto {
    private String codigoReferencia;
    private String horaSalida;
    private Integer idPedido;



    public String getCodigoReferencia() { return codigoReferencia; }
    public String getHoraSalida() { return horaSalida; }
    public Integer getIdPedido() { return idPedido; }

}
