package uvigo.tfgalmacen.mobile_android.models;

public class ProductoIdentificadorDto {
    private String identificadorProducto;

    public String getIdentificadorProducto() {
        return identificadorProducto;
    }
}
